# django-render-comments

./: .pre-commit-config.yaml  LICENSE.txt  README.md  noxfile.py  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/django_render_comments/: __init__.py  apps.py  preprocessor.py
src/django_render_comments/loaders/: __init__.py  app_directories.py  filesystem.py
tests/: __init__.py  conftest.py  test_loader.py  test_preprocessor.py
tests/test_project/: __init__.py  settings.py  urls.py
tests/test_project/templates/test_templates/: block_comment.html  edge_cases.html  hide_eval_precedence.html  hide_render_precedence.html  inline_comment.html  mixed_content.html  realistic_page.html  skip_marker.html  template_tags.html
