[project]
name = "django-render-comments"
version = "0.1.0"
description = "Reusable Django app for rendering Django template comments as HTML comments in DEBUG mode."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Sean Reed", email = "git@sean-reed.com" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Framework :: Django :: 5.2",
    "Framework :: Django :: 6.0",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["django", "templates", "comments", "debugging", "html"]
dependencies = [
    "django>=4.2",
]

[project.urls]
Homepage = "https://github.com/sean-reed/django-render-comments"
Repository = "https://github.com/sean-reed/django-render-comments.git"
Issues = "https://github.com/sean-reed/django-render-comments/issues"
Changelog = "https://github.com/sean-reed/django-render-comments/releases"

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=8.0",
    "pytest-django>=4.8",
    "pytest-cov>=4.1",
    "ruff>=0.9",
    "pyright>=1.1",
    "nox>=2025.5.1",
    "nox-uv>=0.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/django_render_comments"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.test_project.settings"
pythonpath = [".", "src"]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "DJ"]

[tool.pyright]
pythonVersion = "3.10"
include = ["src", "tests"]
typeCheckingMode = "standard"

[tool.coverage.run]
source = ["src/django_render_comments"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
]
